# Security_Data_Science

./: .env  .gitignore  Anomaly_detection_with_embeddings.ipynb  Lab3.ipynb  README.md  classified_domains.csv  dataset_pishing_features.csv  day-1-prompting.ipynb  day-2-document-q-a-with-rag.ipynb  day-2-embeddings-and-similarity-scores.ipynb  ejercicio.ipynb  entropy.py  grafosjaccard.py  lab1.ipynb  lab5.ipynb  lab_malware_families.ipynb  lab_malware_families.py  main.py  malware_dataset.csv  malware_dataset_families.csv  malware_dataset_gemini_clustered.csv  malware_dataset_optimized.csv  malware_dataset_preprocessed.csv  malware_dataset_tsne.csv  malware_dataset_with_families.csv  malware_families_tsne.csv  modelo2.py  pyproject.toml  requirements.txt
data/test/: test_features.csv  test_labels.csv
data/train/: train_features.csv  train_labels.csv
data/val/: val_features.csv  val_labels.csv
day-2/: day-2-classifying-embeddings-with-keras.ipynb  day-2-document-q-a-with-rag.ipynb  day-2-embeddings-and-similarity-scores.ipynb
day-3/: day-3-building-an-agent-with-langgraph.ipynb  day-3-function-calling-with-the-gemini-api.ipynb
day-4/: day-4-fine-tuning-a-custom-model.ipynb  day-4-google-search-grounding.ipynb
