[project]
name = "security-data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-auth>=2.38.0",
    "google-generativeai>=0.8.4",
    "pandas>=2.2.3",
    "tldextract>=5.1.3",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-safe-fixes = ["E", "F401"]